# custom_spdlog

./: CMakeLists.txt  README.md  example_usage.cmake  init_project.sh  logger.hpp  main.cpp  test_main.cpp  test_package_usage.cmake
cmake/: custom_spdlogConfig.cmake.in
